syntax = 'proto3';

package exec;

option go_package = "github.com/hyperledger/burrow/execution/exec";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/tendermint/tendermint/abci/types/types.proto";
import "google/protobuf/timestamp.proto";

import "errors.proto";
import "names.proto";
import "txs.proto";
import "permission.proto";
import "spec.proto";

option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

// This message exists purely for framing []StreamEvent
message StreamEvents {
    repeated StreamEvent StreamEvents = 1;
}

message StreamEvent {
    option (gogoproto.onlyone) = true;
    BeginBlock BeginBlock = 1;
    BeginTx BeginTx = 2;
    txs.Envelope Envelope = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/txs.Envelope"];
    Event Event = 4;
    EndTx EndTx = 5;
    EndBlock EndBlock = 6;
}

message BeginBlock {
    // The height of this block
    uint64 Height = 1;
    // The number of transactions in the block (used as a checksum when consuming StreamEvents)
    uint64 NumTxs = 3;
    // The height of the most recent block we stored in state (which is the last non-empty block in current implementation)
    uint64 PredecessorHeight = 4;
    types.Header Header = 2;
}

message EndBlock {
    uint64 Height = 1;
}

message BeginTx {
    TxHeader TxHeader = 1;
    // The number of events generated by this transaction execution (used as a checksum when consuming StreamEvents)
    uint64 NumEvents = 5;
    // Result of tx execution
    Result Result = 2;
    // If tx execution was an exception
    errors.Exception Exception = 4;
}

message EndTx {
    // The hash of the transaction that caused this event to be generated
    bytes TxHash = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
}

message TxHeader {
    // Transaction type
    uint32 TxType = 1 [(gogoproto.casttype) = "github.com/hyperledger/burrow/txs/payload.Type"];
    // The hash of the transaction that caused this event to be generated
    bytes TxHash = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    // The block height at which this transaction was included
    uint64 Height = 3;
    // The index of this transaction within the block
    uint64 Index = 4;
    // The origin information from the chain on which this tx was originally committed (if restored or otherwise imported)
    Origin Origin = 5;
}

message BlockExecution {
    // The height of this block
    uint64 Height = 1;
    // The height of the most recent block we stored in state (which is the last non-empty block in current implementation)
    uint64 PredecessorHeight = 4;
    types.Header Header = 2;
    repeated TxExecution TxExecutions = 3;
}

message TxExecutionKey {
    // The block height
    uint64 Height = 1;
    // The offset of the TxExecution in bytes
    uint64 Offset = 2;
}

message TxExecution {
    TxHeader Header = 1 [(gogoproto.embed) = true];
    // Signed Tx that triggered this execution
    txs.Envelope Envelope = 6 [(gogoproto.customtype) = "github.com/hyperledger/burrow/txs.Envelope"];
    // Execution events
    repeated Event Events = 7;
    // The execution results
    Result Result = 8;
    // The transaction receipt
    txs.Receipt Receipt = 9;
    // If execution was an exception
    errors.Exception Exception = 10;
    // A proposal may contain other transactions
    repeated TxExecution TxExecutions = 11;
}

message Origin {
    // The original ChainID from for this transaction
    string ChainID = 1;
    // The original height at which this transaction was committed
    uint64 Height = 2;
    // The original index in the block
    uint64 Index = 3;
    // The original block time for this transaction
    google.protobuf.Timestamp Time = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message Header {
    option (gogoproto.goproto_stringer) = false;
    // Transaction type
    uint32 TxType = 1 [(gogoproto.casttype) = "github.com/hyperledger/burrow/txs/payload.Type"];
    // The hash of the transaction that caused this event to be generated
    bytes TxHash = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    // The type of event
    uint32 EventType = 3 [(gogoproto.casttype) = "EventType"];
    // EventID published with event
    string EventID = 4;
    // The block height at which this event was emitted
    uint64 Height = 5;
    // The index of this event relative to other events generated by the same transaction
    uint64 Index = 6;
    // If event is exception
    errors.Exception Exception = 7;
}

message Event {
    option (gogoproto.goproto_stringer) = false;
    option (gogoproto.onlyone) = true;
    Header Header = 1;
    InputEvent Input = 2;
    OutputEvent Output = 3;
    CallEvent Call = 4;
    LogEvent Log = 5;
    GovernAccountEvent GovernAccount = 6;
}

// Could structure this further if needed - sum type of various results relevant to different transaction types
message Result {
    // EVM execution return
    bytes Return = 1;
    // Gas used in computation
    uint64 GasUsed = 2;
    // Name entry created
    names.Entry NameEntry = 3;
    // Permission update performed
    permission.PermArgs PermArgs = 4;
}

message LogEvent {
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    bytes Data = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    repeated bytes Topics = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.Word256", (gogoproto.nullable) = false];
}

message CallEvent {
    uint32 CallType = 5 [(gogoproto.casttype) = "CallType"];
    CallData CallData = 1;
    bytes Origin = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    uint64 StackDepth = 3;
    bytes Return = 4 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
}

message GovernAccountEvent {
    spec.TemplateAccount AccountUpdate = 1;
}

message InputEvent {
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
}

message OutputEvent {
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
}

message CallData {
    bytes Caller = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    bytes Callee = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    bytes Data = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    uint64 Value = 4;
    uint64 Gas = 5;
}
